; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/sni/extr_pcimt.c_disable_pcimt_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/sni/extr_pcimt.c_disable_pcimt_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PCIMT_IRQ_INT2 = common dso_local global i32 0, align 4
@PCIMT_IRQSEL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @disable_pcimt_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @PCIMT_IRQ_INT2, align 4
  %6 = sub i32 %4, %5
  %7 = shl i32 1, %6
  %8 = xor i32 %7, -1
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i64, i64* @PCIMT_IRQSEL, align 8
  %11 = inttoptr i64 %10 to i32*
  %12 = load volatile i32, i32* %11, align 4
  %13 = and i32 %12, %9
  store volatile i32 %13, i32* %11, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
